# carrer_hub

./: .gitignore  .ruff.toml  LICENSE  README.md  database.db  example.env  pyproject.toml
migrations/: env.py
src/: main.py
src/database/: session.py  settings.py
src/models/: __init__.py  account.py  company.py  inscription.py  job.py  student.py
src/routes/: auth.py  company.py  inscription.py  job.py  student.py
src/schemas/: auth.py  job.py
src/security/: encryption.py  enviroment.py
src/utils/: enums.py  tokenization.py
tests/: conftest.py
tests/models/: test_account.py  test_student.py
