[project]
name = "carrer_hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Guimarães",email = "89321902+guimaraesfe1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[tool.taskipy.tasks]
fix = "ruff check --fix && ruff format"
dev = "uvicorn src.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.6,<0.15.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
